--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
 
     <application
         android:allowBackup="true"
-        android:name="MyApplication"
         android:enabled="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,7 +19,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-           android:configChanges="locale"
+            android:screenOrientation="portrait"
 
 
             android:theme="@style/AppTheme.NoActionBar">
